src/test/deca/context/invalid/created/return/return_main.deca
// Description :
//    return dans un main
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

{
return a;
}